[package]
edition = "2021"
name = "loki-sink"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.14", features = ["std"]}
once_cell = {version = "1.9.0"}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = {version = "1.0.78"}
ureq = {version = "2.4.0", features = ["json"]}
# static_init = {version = "1.0.2"}
